# paritran

./: .dockerignore  .env.example  .gitattributes  .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  NOTES.md  README.md  SPEC.md  docker-compose.yml  requirements.txt  results.json  run.sh
backend/: .dockerignore  pyproject.toml  requirements-dev.txt  requirements.txt
backend/paritran/: __init__.py  config.py  demo.py  pipeline.py
backend/paritran.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/paritran/api/: __init__.py  auth.py  deps.py  main.py  runstore.py  sse.py
backend/paritran/db/: __init__.py  migrate.py  persist.py  repo.py  seed.py
backend/paritran/engine/: ingest_ocr.py  linkage.py  money_trail.py  ner.py  synthetic.py  triage.py  types.py
backend/paritran/eval/: __init__.py  harness.py
backend/paritran/llm/: __init__.py  client.py  ollama_client.py  stub.py
backend/tests/: _paths.py  conftest.py  test_api_artefact.py  test_api_audit.py  test_api_runs.py  test_api_sse.py  test_arbitrary_seed.py  test_audit_concurrency.py  test_audit_guc.py  test_auth.py  test_corpus_provenance.py  test_custody_chain.py  test_demo.py  test_engine_linkage.py  test_engine_money_trail.py  test_engine_ner.py  test_engine_synthetic.py  test_engine_triage.py  test_f9_gate.py  test_health.py  test_ingest_ocr.py  test_legal_bm25.py  test_legal_mapper.py  test_legal_semantic.py  test_llm_ollama_parser.py  test_llm_stub.py  test_migrations.py  test_packet.py  test_persist.py  test_pipeline.py  test_reproduction.py  test_rls_audit.py  test_seed.py
(+133 files in other folders)
