[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paritran"
version = "0.1.0"
description = "Paritran backend. On-premise, zero-egress court-admissibility engine for the Cyber Crime Branch."
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["paritran*"]

# Data files ship inside the wheel so the installed package is
# self-contained (the container's pytest imports from site-packages).
[tool.setuptools.package-data]
"paritran.db" = ["migrations/*.sql"]
"paritran.engine.legal" = ["*.json", "authoritative/*"]
"paritran.eval" = ["golden/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
addopts = "-p no:cacheprovider"
